# auto-batching-proxy

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile  README.md  compose.yaml
.github/: dependabot.yaml
.github/workflows/: general.yaml
src/: config.rs  error.rs  lib.rs  main.rs
src/services/: inference.rs
